# Java-script

./: app.js  app.py  index.html  pyproject.toml  pyvenv.cfg
templates/: base.html  cadastrar_produto.html  cadastro.html  editar_produto.html  index.html  login.html  produto.html
