[project]
name = "projetoflask"
version = "0.1.0"
description = ""
authors = [
    {name = "Brunno (brunno-pontes)",email = "brunnovivocq@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)"
]

[tool.poetry]
packages = [{include = "projetoflask", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
